objects/MPLS_RVA_Quote_Request__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Items_to_Consider__c</fullName>
        <inlineHelpText>Example - customer has requested that Verizon be used as the LEC into their site.</inlineHelpText>
        <label>Additional Items to Consider</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Analog_Line__c</fullName>
        <label>Analog Line</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Backup_Circuit_Address__c</fullName>
        <label>Backup Circuit Address</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Backup_Circuit_City__c</fullName>
        <label>Backup Circuit City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Backup_Circuit_Country__c</fullName>
        <label>Backup Circuit Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Select</fullName>
                </value>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Antigua &amp; Deps</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Brunei</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Burkina</fullName>
                </value>
                <value>
                    <fullName>Burundi</fullName>
                </value>
                <value>
                    <fullName>Cambodia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Backup_Circuit_Postal_Code__c</fullName>
        <label>Backup Circuit Postal Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Backup_Circuit_Province__c</fullName>
        <label>Backup Circuit Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Backup_Circuit_State__c</fullName>
        <label>Backup Circuit State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Select</fullName>
                </value>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Backup_Circuit__c</fullName>
        <inlineHelpText>(*Backup circuits are provided with diverse PE and CE routers; if additional diversity is required this can be quoted upon request.)</inlineHelpText>
        <label>Backup Circuit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Backup with Diversity Options Below</fullName>
                </value>
                <value>
                    <fullName>No Backup</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Backup_Data_Center_Bandwidth_in_Mbps__c</fullName>
        <label>Backup Data Center Bandwidth in Mbps</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Backup_Data_Center_Termination__c</fullName>
        <label>Backup Data Center Termination</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>n|Frame:  701 Congressional Blvd., Suite 100, Carmel, IN</fullName>
                </value>
                <value>
                    <fullName>Latisys:  6900 S. Peoria St. Englewood, CO 80112</fullName>
                </value>
                <value>
                    <fullName>Savvis Slough: 628-630 Ajax Avenue, Slough SL1 4DG United Kingdom</fullName>
                </value>
                <value>
                    <fullName>Equinix Frankfurt:  FR4, Lärchenstr.110, 65933 Frankfurt-Griesheim, Germany</fullName>
                </value>
                <value>
                    <fullName>Equinix Sydney:  SY2, Unit C, 639 Gardners Road, Mascot, Sydney, NSW 2020 Australia</fullName>
                </value>
                <value>
                    <fullName>NextDC: 830 Lorimer Street, Port Melbourne, VIC, 3207</fullName>
                </value>
                <value>
                    <fullName>IDC-F Fukuoka Kitakyushu 1DC, Building 2, 2nd Floor, ōazamaeda ji kukioka 2142 – 1, Fukuoka Prefecture Yahata District, Kitakyushu, 805-0058, Japan</fullName>
                </value>
                <value>
                    <fullName>IDC Frontier Shinjuku DC, Attn: ININ / Customer Name, 4-29 Yotsuya, Shinjuku-ku, Tokyo 160-0004 Japan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Backup_NPA_NXX__c</fullName>
        <label>Backup NPA/NXX</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bandwidth_Calculation__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Bandwidth Calculation</label>
        <referenceTo>Bandwidth_Calculation__c</referenceTo>
        <relationshipLabel>MPLS / RVA / Data Center Quote Requests</relationshipLabel>
        <relationshipName>MPLS_RVA_Data_Center_Quote_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bandwidth_Increments_Kbps__c</fullName>
        <label>Bandwidth Increments (Kbps)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>64</fullName>
                </value>
                <value>
                    <fullName>500</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bandwidth_in_Mbps__c</fullName>
        <label>Bandwidth in Mbps</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Budgetary__c</fullName>
        <label>Budgetary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CE_PE_Diversity__c</fullName>
        <formula>if(ispickval( Backup_Circuit__c , &quot;Backup with diversity options below&quot;),&quot;Yes&quot;,&quot;N/A&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CE/PE Diversity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CODEC__c</fullName>
        <label>CODEC</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>G.711</fullName>
                </value>
                <value>
                    <fullName>G.729</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CO_Diversity__c</fullName>
        <inlineHelpText>2 circuits via different physical paths, delivered by the same carrier or LEC.</inlineHelpText>
        <label>CO Diversity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <formula>Quote__r.Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Center_Contract_Addendum_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Addendum is not required if DC Service Pricing is included in CaaS Agreement Exhibits</inlineHelpText>
        <label>Data Center Contract Addendum Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fiber__c</fullName>
        <label>Fiber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Internet__c</fullName>
        <label>Internet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAN_Cross_Connect__c</fullName>
        <label>LAN Cross Connect</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LEC_Diversity__c</fullName>
        <inlineHelpText>2 circuits via different physical paths, delivered by separate carrier or LEC.</inlineHelpText>
        <label>LEC Diversity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LegacyId__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPLS_Contract_Addendum_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Addendum is not required if MPLS Pricing is included in CaaS Agreement Exhibits.</inlineHelpText>
        <label>MPLS Contract Addendum Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Master_Data_Center_Quote_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Data Center Quote Request</label>
        <referenceTo>MPLS_RVA_Quote_Request__c</referenceTo>
        <relationshipLabel>MPLS / RVA Sites</relationshipLabel>
        <relationshipName>MPLS_RVA_Data_Center_Quote_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <formula>Text( Bandwidth_Calculation__r.Model__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multiple_Entry_Points__c</fullName>
        <inlineHelpText>used with ANY diversity option (where available) physically separate entry points to the client premises - physical diversity at the site level.</inlineHelpText>
        <label>Multiple Entry Points</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Solution_Design__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Solution Design</label>
        <referenceTo>New_Solution_Design__c</referenceTo>
        <relationshipLabel>MPLS / RVA / Data Center Quote Requests</relationshipLabel>
        <relationshipName>MPLS_RVA_Data_Center_Quote_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_to_MPLS_RVA_Datacenter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to Opportunity</description>
        <label>Opportunity to MPLS/ RVA/ Datacenter</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>MPLS / RVA / Data Center Quote Requests</relationshipLabel>
        <relationshipName>MPLS_RVA_Data_Center_Quote_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <formula>Quote__r.Partner__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Circuit_Address__c</fullName>
        <label>Primary Circuit Address</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Circuit_City__c</fullName>
        <label>Primary Circuit City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Circuit_Country__c</fullName>
        <label>Primary Circuit Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Select</fullName>
                    <default>true</default>
                    <label>Select</label>
                </value>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Antigua &amp; Deps</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Brunei</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Burkina</fullName>
                </value>
                <value>
                    <fullName>Burundi</fullName>
                </value>
                <value>
                    <fullName>Cambodia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Circuit_Postal_Code__c</fullName>
        <label>Primary Circuit Postal Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Circuit_Province__c</fullName>
        <label>Primary Circuit Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Circuit_State__c</fullName>
        <label>Primary Circuit State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
                <value>
                    <fullName>New Jersey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Data_Center_Bandwidth_Mbps__c</fullName>
        <formula>Total_Data_Center_Bandwidth_Mbps__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Data Center Bandwidth (Mbps)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Data_Center_Termination__c</fullName>
        <label>Primary Data Center Termination</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>n|Frame:  701 Congressional Blvd., Suite 100, Carmel, IN</fullName>
                </value>
                <value>
                    <fullName>Latisys:  6900 S. Peoria St. Englewood, CO 80112</fullName>
                </value>
                <value>
                    <fullName>Savvis Slough: 628-630 Ajax Avenue, Slough SL1 4DG United kingdom</fullName>
                </value>
                <value>
                    <fullName>Equinix Frankfurt:  FR4, Lärchenstr.110, 65933 Frankfurt-Griesheim, Germany</fullName>
                </value>
                <value>
                    <fullName>Equinix Sydney: SY2, Unit C, 639 Gardners Road, Mascot, Sydney, NSW 2020 Australia</fullName>
                </value>
                <value>
                    <fullName>Denver, CO</fullName>
                </value>
                <value>
                    <fullName>NextDC: 830 Lorimer Street, Port Melbourne, VIC, 3207</fullName>
                </value>
                <value>
                    <fullName>IDC-F Fukuoka Kitakyushu 1DC, Building 2, 2nd Floor, ōazamaeda ji kukioka 2142 – 1, Fukuoka Prefecture Yahata District, Kitakyushu, 805-0058, Japan</fullName>
                </value>
                <value>
                    <fullName>IDC Frontier Shinjuku DC, Attn: ININ / Customer Name, 4-29 Yotsuya, Shinjuku-ku, Tokyo 160-0004 Japan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_NPA_NXX__c</fullName>
        <inlineHelpText>(Area code / Exchange, i.e. 317/715)</inlineHelpText>
        <label>Primary NPA/NXX</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Type__c</fullName>
        <label>Quote Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MPLS</fullName>
                </value>
                <value>
                    <fullName>RVA - Managed</fullName>
                </value>
                <value>
                    <fullName>RVA - Unmanaged</fullName>
                </value>
                <value>
                    <fullName>Data Center</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Quote__c</referenceTo>
        <relationshipLabel>MPLS / RVA / Data Center Quote Requests</relationshipLabel>
        <relationshipName>MPLS_RVA_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requested_Billing_Currency__c</fullName>
        <label>Requested Billing Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>YEN</fullName>
                </value>
                <value>
                    <fullName>Other (Specify in Notes)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SIP_Trunks__c</fullName>
        <label>SIP Trunks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Set_up_Fees__c</fullName>
        <label>Set up Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Solution_Design__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Solution Design</label>
        <referenceTo>Solution_Design__c</referenceTo>
        <relationshipLabel>MPLS / RVA / Data Center Quote Requests</relationshipLabel>
        <relationshipName>MPLS_RVA_Data_Center_Quote_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Split_Switchover__c</fullName>
        <label>Split Switchover</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Special Inquiry</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Awaiting Salesperson Requirements</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>36</fullName>
                </value>
                <value>
                    <fullName>48</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Bandwidth_Growth_Adjustment__c</fullName>
        <label>Data Center Bandwidth Growth Adjustment</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Data_Center_Bandwidth_Mbps_Numeric__c</fullName>
        <label>Total Data Center Bandwidth (Mbps)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Data_Center_Bandwidth_Mbps__c</fullName>
        <label>Total Data Center Bandwidth (Mbps)</label>
        <summarizedField>MPLS_RVA_Data_Center_Site__c.Total_Site_Bandwidth_Mbps_numeric__c</summarizedField>
        <summaryForeignKey>MPLS_RVA_Data_Center_Site__c.Master_Data_Center_Quote_Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Site_Bandwidth_Mbps__c</fullName>
        <formula>IF( 
ispickval(  CODEC__c  , &quot;G.711&quot;) &amp;&amp;  (Model__c =&quot;Remote Control VOIP&quot;) , 
Bandwidth_Calculation__r.RC_VOIP_G_711_plus_Apps_Mbps__c ,
if(
ispickval(  CODEC__c  , &quot;G.729&quot;) &amp;&amp;  (Model__c =&quot;Remote Control VOIP&quot;), 
Bandwidth_Calculation__r.RC_VOIP_G_729_plus_Apps_Mbps__c ,
IF( 
ispickval(  CODEC__c  , &quot;G.711&quot;) &amp;&amp;  Model__c =&quot;Local Control&quot;, 
  Bandwidth_Calculation__r.Local_Control_Bandwidth_Mbps__c   ,
if(
ispickval(  CODEC__c  , &quot;G.729&quot;) &amp;&amp;  Model__c =&quot;Remote Control TDM&quot;, 
 Bandwidth_Calculation__r.RVA_Total_BW_incl_Apps_at_G_729_Mbps__c  ,
if(
ispickval(  CODEC__c  , &quot;G.711&quot;) &amp;&amp;  Model__c =&quot;Remote Control TDM&quot;, 
 Bandwidth_Calculation__r.RVA_Total_BW_incl_Apps_at_G_711_Mbps__c  ,
0)
) 
) 
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Site Bandwidth (Mbps)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>